fixed logo on footer on iphone5

--- a/src/components/footer-section/style.styl
+++ b/src/components/footer-section/style.styl
@@ -26,7 +26,7 @@
 .logo
   margin-top 12px
   height 4rem
-  width 20rem
+  max-width 20rem
   @media screen and (max-width: 350px)
     height 3rem
 
